[project]
name = "dunya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arabictransliterator",
    "beautifulsoup4==4.12.2",
    "celery~=5.4.0",
    "dj-database-url==2.1.0",
    "django~=4.2",
    "django-manifest-loader==1.0.0",
    "django-sendfile2==0.7.0",
    "djangorestframework~=3.15.0",
    "essentia==2.1b6.dev1110 ; sys_platform == 'linux'",
    "eyed3~=0.9.7",
    "filetype==1.2.0",
    "google-api-python-client~=2.94.0",
    "google-auth-httplib2~=0.1.0",
    "google-auth-oauthlib~=1.0.0",
    "levenshtein>=0.27.1",
    "matplotlib~=3.9.0",
    "musicbrainzngs==0.7.1",
    "mwparserfromhell==0.5.4",
    "networkx==2.3",
    "numpy~=1.26.0",
    "pillow~=10.3.0",
    "psycopg2-binary==2.9.9",
    "pycompmusic",
    "python-dateutil==2.8.2",
    "python-magic==0.4.27",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "redis~=5.0.6",
    "requests~=2.32",
    "scipy==1.13.1",
    "sentry-sdk~=2.6.0",
    "seyiranalyzer",
    "tomato",
    "unidecode==1.3.8",
    "uwsgi==2.0.26",
    "whitenoise~=6.7.0",
]

[tool.uv.sources]
pycompmusic = { git = "https://github.com/mtg/pycompmusic.git", rev = "72b689e" }
arabictransliterator = { git = "https://github.com/mtg/ArabicTransliterator.git", rev = "df0296c5" }
tomato = { git = "https://github.com/mtg/tomato.git", rev = "master" }
seyiranalyzer = { git = "https://github.com/sertansenturk/seyiranalyzer.git", rev = "04392597" }

[dependency-groups]
dev = [
    "django-debug-toolbar==4.4.2",
    "flake8==7.1.0",
    "ipdb==0.13.13",
    "ipython~=8.25.0",
    "isort==5.13.2",
    "pep8==1.7.1",
    "pylint==3.2.3",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
# Rules: https://docs.astral.sh/ruff/rules
# I: import order
# S: flake8-bandit
# B: flake8-bugbear
# A: flake8-builtins
# T10: flake8-debugger
# DJ: flake8-django
# G: flake8-logging-format
# PIE: flake8-pie
# T20: flake8-print
select = ["A", "B", "E4", "E9", "F", "I", "S", "T10", "DJ", "G", "PIE", "T20"]
ignore = ["DJ001", "DJ012", "T201", "B904", "G004", "S101", "S105", "S311", "S308", "S603", "S110", "S108"]
