[project]
name = "dunya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arabictransliterator",
    "beautifulsoup4==4.15.0",
    "celery~=5.6.0",
    "dj-database-url==3.1.2",
    "django~=5.2",
    "django-manifest-loader==1.0.0",
    "django-sendfile2==0.7.2",
    "djangorestframework~=3.17.0",
    "essentia==2.1b6.dev1389 ; sys_platform == 'linux'",
    "eyed3~=0.9.7",
    "filetype==1.2.0",
    "google-api-python-client~=2.94.0",
    "google-auth-httplib2~=0.1.0",
    "google-auth-oauthlib~=1.0.0",
    "levenshtein>=0.27.1",
    # tomato requires matplotlib <3.10; 3.9.2 is the first with py3.13 wheels
    "matplotlib~=3.9.2",
    "musicbrainzngs==0.7.1",
    "mwparserfromhell==0.5.4",
    "networkx==2.3",
    "numpy~=2.2",
    "pillow~=12.3.0",
    "psycopg2-binary==2.9.12",
    "pycompmusic",
    "python-dateutil==2.9.0.post0",
    "python-magic==0.4.27",
    "pytz==2026.2",
    "pyyaml==6.0.3",
    "redis~=5.0.6",
    "requests~=2.32",
    "scipy~=1.15",
    "sentry-sdk~=2.8",
    "seyiranalyzer",
    "tomato",
    "unidecode==1.4.0",
    "uwsgi==2.0.31",
    "whitenoise~=6.12.0",
]

[tool.uv]
# tomato pins pandas~=1.5, which has no python 3.13 wheels and predates numpy 2.
# The only tomato module using pandas (symbolic/symbtr/extras/txt.py) relies on
# DataFrame.ix, removed in pandas 1.0, so it is broken under any installable
# version; the modules dunya imports don't use pandas at all.
override-dependencies = ["pandas~=2.3"]

[tool.uv.sources]
pycompmusic = { git = "https://github.com/mtg/pycompmusic.git", rev = "72b689e" }
arabictransliterator = { git = "https://github.com/mtg/ArabicTransliterator.git", rev = "df0296c5" }
tomato = { git = "https://github.com/mtg/tomato.git", rev = "master" }
seyiranalyzer = { git = "https://github.com/sertansenturk/seyiranalyzer.git", rev = "04392597" }

[dependency-groups]
dev = [
    "django-debug-toolbar~=7.0",
    "ipdb==0.13.13",
    "ipython~=8.25.0",
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
# Rules: https://docs.astral.sh/ruff/rules
# I: import order
# S: flake8-bandit
# B: flake8-bugbear
# A: flake8-builtins
# T10: flake8-debugger
# DJ: flake8-django
# G: flake8-logging-format
# PIE: flake8-pie
# T20: flake8-print
select = ["A", "B", "E4", "E9", "F", "I", "S", "T10", "DJ", "G", "PIE", "T20"]
ignore = ["DJ001", "DJ012", "T201", "B904", "G004", "S101", "S105", "S311", "S308", "S603", "S110", "S108"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dunya.settings"
